# cmake_vcpkg_skeleton

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
sampleLib/: CMakeLists.txt  exampleLib.h  main.cpp
